--- a/TowerDefense/Assembly-CSharp.csproj
+++ b/TowerDefense/Assembly-CSharp.csproj
@@ -67,39 +67,41 @@
     <Compile Include="Assets\Scripts\Enemy.cs" />
     <Compile Include="Assets\Scripts\EnemyControl.cs" />
     <Compile Include="Assets\Scripts\EnemyManager.cs" />
+    <Compile Include="Assets\Scripts\LevelGenerator\ColorToPrefab.cs" />
+    <Compile Include="Assets\Scripts\LevelGenerator\LevelGenerator.cs" />
     <Compile Include="Assets\Scripts\PlayerManager.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
     <Compile Include="Assets\Scripts\WaypointManager.cs" />
     <Compile Include="Assets\Scripts\WeaponFSM.cs" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>/Users/isaactorres/Desktop/cst326/pong/TowerDefense/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>/Users/isaactorres/Desktop/cst326/towerDefense/TowerDefense/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>/Applications/Unity/Hub/Editor/2019.3.0a8/Unity.app/Contents/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
